--- a/build.gradle
+++ b/build.gradle
@@ -61,10 +61,8 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'jacoco'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
-apply plugin: 'nebula.maven-publish'
-apply plugin: 'com.jfrog.bintray'
+apply plugin: 'idea'
+apply plugin: 'eclipse'
 
 repositories {
     if (CERN_VM) {
@@ -77,18 +75,23 @@ repositories {
 }
 
 if (DEPLOYMENT) {
+    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
+    apply plugin: 'nebula.maven-publish'
+    apply plugin: 'com.jfrog.bintray'
+
     println 'Applying deployment scripts'
     apply from: './scripts/bintray-deploy.gradle'
 }
 
-group 'org.streamingpool'
+group 'org.tensorics'
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
     compile 'org.tensorics:tensorics-core:0.+'
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.5.2.RELEASE') { exclude module: "spring-boot-starter-logging" }
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.2.RELEASE'
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.5.9.RELEASE') { exclude module: "spring-boot-starter-logging" }
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.9.RELEASE'
 }
 
 sourceSets {
@@ -100,16 +103,20 @@ sourceSets {
 
 javadoc { options.encoding = "UTF-8" }
 
-task wrapper(type: Wrapper) { gradleVersion = '4.0' }
+task wrapper(type: Wrapper) { gradleVersion = '4.8.1' }
 
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
+if(!project.tasks.findByName("javadocJar")) {
+    task javadocJar(type: Jar) {
+        classifier = 'javadoc'
+        from javadoc
+    }
 }
 
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
+if(!project.tasks.findByName("sourcesJar")) {
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
 }
 
 artifacts { archives javadocJar, sourcesJar }
@@ -120,5 +127,19 @@ jacocoTestReport {
         xml.destination new File("${buildDir}/reports/jacoco/report.xml")
         html.enabled true
         csv.enabled false
+    }
+}
+
+eclipse {
+    classpath {
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
     }
 }
