--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,24 @@
 language: java
-jdk:
-  - oraclejdk8
 sudo: false
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+jdk:
+  - openjdk8
+  - openjdk11
 before_install:
   - chmod +x ./gradlew
-deploy:
-  provider: script
-  skip_cleanup: true
-  script: ./gradlew bintrayUpload -Ddeployment=true
-  on:
-    tags: true
 script:
-  - ./gradlew check
+  - ./gradlew check --stacktrace
   - ./gradlew jacocoTestReport
+before_deploy:
+  - ./gradlew generateLicenseReport
+  - ./gradlew javadoc
+  - echo $SIGNING_KEY_SECRING_BASE64 | base64 --decode > ./signing.key.secring
+  - export SIGNING_KEY_PATH=./signing.key.secring
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: ./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository -DDEPLOYMENT=true
+    on:
+      tags: true
+      jdk: openjdk11
 after_success:
   - bash <(curl -s https://codecov.io/bash)
