--- a/build.gradle
+++ b/build.gradle
@@ -1,61 +1,20 @@
 buildscript {
-    project.ext.CERN_VM = System.getProperty('CERN_TECHNET_VM') ?: System.getenv('CERN_TECHNET_VM') ?: false
-    project.ext.TRAVIS_CI = System.getProperty('TRAVIS') ?: System.getenv('TRAVIS') ?: false
-    project.ext.DEPLOYMENT = System.getProperty('deployment') ?: false
-    project.ext.VCS_TAG = System.getProperty('TRAVIS_TAG') ?: System.getenv('TRAVIS_TAG')
-    project.ext.POM = [
-        groupId    : 'org.tensorics',
-        artifactId : 'tensorics-core-starter',
-        description: 'Tensorics is a java framework which uses a tensor as a central object. A tensor represents a set of values placed in an N-dimensional space. Wherever you are tempted to use maps of maps, a tensor might be a good choice ;-) Tensorics provides methods to create, transform and performing calculations with those tensors.',
-        developers : [
-            [
-                id   : 'kaifox',
-                name : 'Kajetan Fuchsberger',
-                email: 'kajetan.fuchsberger@gmail.com'
-            ],
-            [
-                id   : 'agorzawski',
-                name : 'Arek Gorzawski',
-                email: 'agorzawski@gmail.com'
-            ],
-            [
-                id   : 'michi42',
-                name : 'Michi Hostettler',
-                email: 'michi.hostettler@cern.ch'
-            ],
-            [
-                id   : 'andreacalia',
-                name : 'Andrea Calia',
-                email: 'andrea.calia.46@gmail.com'
-            ]
-        ]]
-    project.ext.INFO = [
-        repo        : 'https://github.com/tensorics/tensorics-core-starter.git',
-        url         : 'http://tensorics.org/',
-        github      : 'https://github.com/tensorics/tensorics-core-starter',
-        githubIssues: 'https://github.com/tensorics/tensorics-core-starter/issues'
-    ]
-    project.ext.BINTRAY = [
-        repo        : 'tensorics-repo',
-        name        : 'org.tensorics:tensorics-core-starter',
-        organization: 'tensorics',
-        userName    : 'tensorics-dev',
-        apiToken    : System.getenv('BINTRAY_API_TOKEN')
-    ]
+    project.ext['CERN_VM'] = System.getProperty('CERN_TECHNET_VM') ?: System.getenv('CERN_TECHNET_VM') ?: project.hasProperty('CERN_TECHNET_VM') ?: false
+    project.ext['DEPLOYMENT'] = System.getProperty('DEPLOYMENT') ?: false
 
     repositories {
-        if (CERN_VM) {
-            maven { url 'http://artifactory.cern.ch/gradle-plugins' }
+        if (project['CERN_VM']) {
             maven { url 'http://artifactory.cern.ch/ds-jcenter' }
             maven { url 'http://artifactory.cern.ch/development' }
+            maven { url 'http://artifactory.cern.ch/gradle-plugins' }
         } else {
-            mavenCentral()
-            jcenter()
+            gradlePluginPortal()
         }
     }
+
     dependencies {
-        classpath 'com.netflix.nebula:nebula-publishing-plugin:5.1.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.github.jk1:gradle-license-report:1.5'
+        classpath 'io.github.gradle-nexus:publish-plugin:1.0.0'
     }
 }
 
@@ -64,34 +23,28 @@ apply plugin: 'jacoco'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 
+group = project['POM.groupId']
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+
 repositories {
-    if (CERN_VM) {
+    if (project['CERN_VM']) {
         maven { url 'http://artifactory.cern.ch/ds-jcenter' }
         maven { url 'http://artifactory.cern.ch/development' }
     } else {
         mavenCentral()
-        jcenter()
     }
 }
 
-if (DEPLOYMENT) {
-    apply plugin: 'maven'
-    apply plugin: 'maven-publish'
-    apply plugin: 'nebula.maven-publish'
-    apply plugin: 'com.jfrog.bintray'
-
-    println 'Applying deployment scripts'
-    apply from: './scripts/bintray-deploy.gradle'
+dependencies {
+    compile group: 'org.tensorics', name: 'tensorics-core', version: tensoricsCoreVersion
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter', version: springBootVersion) { exclude module: "spring-boot-starter-logging" }
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
 }
 
-group 'org.tensorics'
-
-sourceCompatibility = JavaVersion.VERSION_1_8
-
-dependencies {
-    compile 'org.tensorics:tensorics-core:0.+'
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.1.0.RELEASE') { exclude module: "spring-boot-starter-logging" }
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.0.RELEASE'
+wrapper {
+    gradleVersion = '5.4.1'
+    distributionType = Wrapper.DistributionType.ALL
 }
 
 sourceSets {
@@ -101,9 +54,24 @@ sourceSets {
     }
 }
 
-javadoc { options.encoding = "UTF-8" }
 
-task wrapper(type: Wrapper) { gradleVersion = '4.8.1' }
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        xml.destination file("$buildDir/reports/jacoco/report.xml")
+        html.enabled true
+        csv.enabled false
+    }
+}
+
+javadoc { options.encoding = "UTF-8" }
 
 if(!project.tasks.findByName("javadocJar")) {
     task javadocJar(type: Jar) {
@@ -119,17 +87,6 @@ if(!project.tasks.findByName("sourcesJar")) {
     }
 }
 
-artifacts { archives javadocJar, sourcesJar }
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        xml.destination new File("${buildDir}/reports/jacoco/report.xml")
-        html.enabled true
-        csv.enabled false
-    }
-}
-
 eclipse {
     classpath {
         downloadJavadoc = true
@@ -142,4 +99,19 @@ idea {
         downloadJavadoc = true
         downloadSources = true
     }
+}
+
+if (!project['CERN_VM']) {
+    println 'Applying licensing report'
+    apply plugin: 'com.github.jk1.dependency-license-report'
+
+    licenseReport {
+        renderers = [this.class.classLoader.loadClass('com.github.jk1.license.render.InventoryHtmlReportRenderer').newInstance()]
+        filters = [this.class.classLoader.loadClass('com.github.jk1.license.filter.LicenseBundleNormalizer').newInstance()]
+    }
+}
+
+if (project['DEPLOYMENT']) {
+    println 'Applying deployment scripts'
+    apply from: 'https://raw.githubusercontent.com/ossgang/gradle-scripts/master/deployment/deploy-to-maven-central.gradle'
 }
